--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-*{
+div{
 	border: solid black 1px;
 }
 
@@ -13,6 +13,6 @@
 
 #Searchbar{
 
-	background-image: url(data:image/gif;base64,R0lGODlhAQABAID/AMDAwAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw%3D%3D);
+	background-image: url("data:image/gif;base64,R0lGODlhAQABAID/AMDAwAAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw%3D%3D");
 }
 
