--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,6 @@ div{
 
 #Searchbar{
 
-	background-image: url(https://www.google.com/search/about/img/components/landing/hero/desktop/search-bar-top.png);
+	background-image: url("https://www.google.com/search/about/img/components/landing/hero/desktop/search-bar-top.png");
 }
 
