--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,20 +1,195 @@
-div{
-	border: solid black 1px;
-	display: inline-block;
-	float: left;
-	padding-left: 20px;
+/* General */
+
+body {
+  background: #fff;
+  color: #222;
+  font-family: arial,sans-serif;
 }
 
-#header{
-	
-	margin-top: 100px;
-	margin-left: 150px;
+/* Navigation Bar */
 
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-#Searchbar{
-
-	background-image: url("https://www.google.com/search/about/img/components/landing/hero/desktop/search-bar-top.png");
-	background-repeat: no-repeat;
+nav li {
+    float: right;
 }
 
+li#gmail, li#images {
+  margin-top: 13px;
+}
+
+li#gmail a, li#images a {
+  text-decoration: none;
+  font-size: 13px;
+  color: #4c4c4c;
+}
+
+li#options div, li#notifs, li#notifs a, li#profile a, li#profile div {
+  cursor: default;
+}
+
+li#images a {
+  margin-right: 9px;
+}
+
+li#gmail a {
+  margin: 15px;
+}
+
+li#gmail a:hover, li#images a:hover {
+  text-decoration: underline;
+  color: #000;
+}
+
+li#options {
+  width: 16px; height: 16px;
+  margin-top: 15px;
+  margin-left: 13px;
+}
+
+li#options div {
+  width: 100%; height: 100%;
+  display: block;
+  background-image: url("img/options.png");
+}
+
+li#options:hover div {
+  background-image: url("img/options_hover.png");
+}
+
+li#notifs {
+  height: 20px; width: 20px;
+  margin-top: 13px;
+  margin-left: 27px;
+  background-color: #767676;
+  border-radius: 100%;
+}
+
+li#notifs:hover {
+  background-color: #000;
+}
+
+li#notifs img {
+  cursor: default;
+  border-radius: 100%;
+  margin: 0 5px 0 5px;
+}
+
+li#profile {
+  margin-top: 7px;
+  margin-left: 19px;
+  margin-right: 21px;
+}
+
+li#profile div {
+  width: 32px; height: 32px;
+  background-image: url("img/profile.jpg");
+  display: block;
+  border-radius: 100%;
+}
+
+/* Logo and searchbox */
+
+div#content {
+  margin-top: 0;
+  clear: both;
+}
+
+form {
+  margin-top: 0;
+}
+
+#logo {
+  height:233px;
+  margin-top:50px;
+}
+
+#logo img {
+  height: 92px;
+  width: 272px;
+  padding-top: 109px;
+}
+
+input[type="search"] {
+  width: 584px; height: 40px;
+  border: 1px solid #d0d0d0;
+  line-height: 0;
+  overflow: visible;
+  white-space: nowrap;
+}
+
+input[type="search"]:focus {
+  border: 1px none #4d90fe;
+}
+
+input[type="submit"] {
+  background-color: #f2f2f2;
+  border: 1px solid #f2f2f2;
+  border-radius: 2px;
+  color: #757575;
+  cursor: default;
+  font-family: arial,sans-serif;
+  font-size: 13px;
+  font-weight: bold;
+  height: 36px;
+  line-height: 27px;
+  margin: 32px 2px;
+  min-width: 54px;
+  padding: 0 16px;
+  text-align: center;
+  display: inline-block;
+}
+
+input[type="submit"]:hover {
+  background-image: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+  background-color: #000000;
+  border: 1px solid #c6c6c6;
+  box-shadow: 0 1px 1px #c6c6c6;
+  color: #222;
+}
+
+/* Footer */
+
+footer {
+  width: 100%;
+  height: 40px;
+  background-color: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+}
+
+footer div#right-footer li {
+  float: right;
+  padding: 10px 0 10px 31px;
+}
+
+footer div#right-footer {
+  padding-right: 30px;
+}
+
+footer div#left-footer li {
+  float: left;
+  padding: 10px 30px 10px 0;
+}
+
+footer div#left-footer {
+  padding-left: 30px;
+}
+
+footer li a {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 13px;
+  color: #666;
+}
+
+footer li a:hover {
+  text-decoration: underline;
+}
