--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,12 +71,12 @@ button {
 
 	display: inline-block;
 	margin-top: 15px;
-	border: none;
+	border: #e4d6d6;
 	background-color: blue;
 	text-decoration-color: grey;
-	color: grey;
-	background-color: grey;
-	padding: 2px 0px 2px 0px;
+	color: #353131;
+	background-color: #e4d6d6;
+	padding: 5px 10px 5px 10px;
 	font-size: 15px;
 	
 
@@ -87,7 +87,7 @@ button:hover{
 
 	text-decoration-color: black;
 	color: black;
-	border: solid 1px grey;
+	border: grey;
 
 }
 
