--- a/stylesheet.css
+++ b/stylesheet.css
@@ -107,12 +107,14 @@ footer {
 
 #left-footer {
 
+	position: absolute;
 	left: 5px;
 	
 }
 
 #right-footer {
 
+	position: absolute;
 	right: 5px;
 	
 }
