--- a/stylesheet.css
+++ b/stylesheet.css
@@ -108,7 +108,7 @@ footer {
 #left-footer {
 
 	position: absolute;
-	display: inline;
+	display: inline-block;
 	left: 5px;
 	
 }
@@ -116,7 +116,7 @@ footer {
 #right-footer {
 
 	position: absolute;
-	display: inline;
+	display: inline-block;
 	right: 5px;
 	
 }
@@ -132,8 +132,10 @@ footer a {
 footer div{
 
 	border: solid 1px grey;
-	display: inline;
+	display: inline-block;
 }
+
+
 
 
 
